--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,24 @@
 name = "bdk_coin_select"
 version = "0.1.0"
 edition = "2021"
+rust-version = "1.57"
+homepage = "https://bitcoindevkit.org"
+repository = "https://github.com/bitcoindevkit/coin-select"
+documentation = "https://docs.rs/bdk_coin_select"
+description = "Tools for input selection for making bitcoin transactions."
+license = "MIT OR Apache-2.0"
+readme = "README.md"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+# No dependencies! Please do not add any please!
+
+[dev-dependencies]
+rand = "0.7"
+proptest = "0.10"
+bitcoin = "0.30"
+
+[features]
+default = ["std"]
+std = []
